fix spacing

--- a/app/about-me/about.module.scss
+++ b/app/about-me/about.module.scss
@@ -47,7 +47,7 @@
 
 .about {
     min-height: calc(100vh - 88px - 4rem);
-    margin: 2rem auto;
+    margin: 5rem auto 2rem;
     display: grid;
     place-items: center;
 }
